<resources>
    <string name="app_name">Privacy Screen</string>
    <string name="notification_turn_on_shade">Tap to turn on</string>
    <string name="notification_turn_off_shade">Tap to turn off</string>
    <string name="notification_joiner_shade_is_on">is on</string>
    <string name="notification_joiner_shade_is_off">is off</string>
    <string name="alert_service_already_running">Privacy Shield is already on</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="title_activity_settings">Privacy Shade Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="service_active">Privacy Shade Active</string>
    <string name="service_inactive">Privacy Shade inactive</string>
    <string name="pref_header_customize">Customize</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="close_shade">Close Shade</string>
    <string name="title_activity_vinyl">VinylActivity</string>
    <string name="brightness">Brightness</string>
    <string name="change_window_shape">Change Window shape</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="share_app">Share with friends</string>
    <string name="title_activity_feedback_chrome_tab">FeedbackChromeTabActivity</string>
    <string name="invitation_title">Invite Friends and unlock!</string>
    <string name="invitation_message">Invite your friends and both of you get paid vinyls!</string>
    <string name="invitation_deep_link">https://dk3rf.app.goo.gl/6SuK</string>
    <string name="invitation_custom_image">https://lh3.googleusercontent.com/bfBqxbvL6SGMEsJOUFAQsA_9rt1wDWO4lDVunElB3tUf025phRiznFc0LuqAJBsiAyFI=h310-rw</string>
    <string name="invitation_cta">Get the app!</string>
    <string name="customize">Customize</string>
    <string name="facebook_app_id">1910085335935751</string>
    <string name="error_facebook_login">Error while logging into facebook</string>
    <string name="walkthrough_drag_text">Touch to drag the window</string>
    <string name="walkthrough_zoom_text">Touch to zoom in and out the window</string>
    <string name="walkthrough_menu_text">Touch to open the menu</string>
    <string name="title_activity_privacy_screen">PrivacyScreenActivity</string>
    <string name="permission_write_storage">We need storage access to download the wallpapers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="start_privacy_shade">Start Privacy Shade</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_tagLine">Protecting your privacy</string>
</resources>
